blue-redis: add @RedisLock